--- a/CSS/atyle.css
+++ b/CSS/atyle.css
@@ -95,13 +95,30 @@ margin: 10px;
 
 #about{
 flex:3;
+margin: 20px;
+font-family: Arial, Helvetica, sans-serif;
+color:hsl(0, 6%, 77%);
+text-align: justify;
+font-size: 12px;
 
 }
 
-width: 150px;            /* Tamanho desejado (pode usar %, px, rem etc.) */
-height: auto;            /* Mantém proporção */
-border-radius: 12px;     /* Borda arredondada */
-position: absolute;      /* Posição absoluta na tela */
-top: 0;
-left: 0;
-margin: 10px;            /* Espaço do topo e da esquerda */
+#p1{
+margin: 20px;
+text-align:-webkit-center
+
+}
+
+#p2{
+    margin: 20px;
+}
+
+#p3{
+    margin: 20px;
+}
+
+#p4{
+    margin: 20px;
+}
+
+
